help changes: use extension wiki,fixes, use dl

--- a/lib/cg_covered.wiki
+++ b/lib/cg_covered.wiki
@@ -1,8 +1,7 @@
+= Covered =
+
 == Format ==
 cg covered ?regfile?
-
-== Category ==
-Regions
 
 == Summary ==
 Find number of bases covered by regions in a region file
@@ -12,4 +11,7 @@ A region file (any tab separated file with columns chromosome,begin,end) will be
 and the number of bases is returned per chromosome and for the total.
 
 == Arguments ==
-* regfile: file containing regions. If not present, stdin will be used
+; **regfile**: file containing regions. If not present, stdin will be used
+
+== Category ==
+Regions
