--- a/lib/cg_regsubtract.wiki
+++ b/lib/cg_regsubtract.wiki
@@ -1,8 +1,7 @@
+= Regsubtract =
+
 == Format ==
 cg regsubtract region_file1 region_file2
-
-== Category ==
-Regions
 
 == Summary ==
 subtract regions in region_file2 from region_file1
@@ -14,5 +13,8 @@ A new region files containing only regions present in region_file1 and not
 in region_file2 will be written to stdout.
 
 == Arguments ==
-* region_file1: original regions file
-* region_file2: regions file to subtracted
+; **region_file1**: original regions file
+; **region_file2**: regions file to subtracted
+
+== Category ==
+Regions
