--- a/lib/cg_svmulticompar.wiki
+++ b/lib/cg_svmulticompar.wiki
@@ -1,8 +1,7 @@
+= Svmulticompar =
+
 == Format ==
 cg svmulticompar file svfile ...
-
-== Category ==
-Structural
 
 == Summary ==
 Compare multiple structural variant files
@@ -12,6 +11,9 @@ This command is used to create multi sv compar_files.
 These are tab separated files indicating structural variants present in one or more samples.
 
 == Arguments ==
-* svmulticomparfile: resultfile, will be created if it does not exist
-* svfile: file containing structural variants of new sample to be added
+; **svmulticomparfile**: resultfile, will be created if it does not exist
+; **svfile**: file containing structural variants of new sample to be added
 More than one svfile can added in one command
+
+== Category ==
+Structural
