corrected and added extra documentation

--- a/docs/howto.wiki
+++ b/docs/howto.wiki
@@ -2,3 +2,7 @@
 
 == Howtos ==
 * [[howto_multicompar|multicompar]]: How to process, compare, and annotate multiple genomes
+
+* [[howto_query|query]]: Fast querying of annotated files, provides additional functionality for comparing genotypes across multiple genomes
+
+* [[howto_functions|Other functions]]: Genome region operations, primer design, ...
