--- a/lib/cg_updatevarfile.wiki
+++ b/lib/cg_updatevarfile.wiki
@@ -19,6 +19,8 @@ alt wil be updated if alleleSeq* fields are present in the variant file.
 
 == Options ==
 ; **-f**: force overwrite of ref if different from genome sequence in **dbdir**, instead of giving error
+; **-c**: overwrite ref if different from genome only when it is complement of ref, 
+  alt and alleleSeq* are also changed to complement if ref is complement.
 
 == Category ==
 Convert
