--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -26,6 +26,7 @@ braces around the entire field=formula.
 ; **-rf removefields**: write all, except given fields to result.
 ; **-s sortfields**: sort on given fields (uses natural sort, so that e.g. 'chr1 chr2 chr10' will be sorted correctly)
 ; **-nh newheader**: replace header in output with fields given by this option
+; **-sh sepheader**: write a resultfile without header, and write the header into the file **sepheader**
 ; **-hc headerincomment**: if 1, the last of the starting comment lines will be used for the header instead of the first non-comment line
 ; **-h**: return header fields in file
 ; **-n**: return sample names in file
