cg_select change: added -hf option (headerfile)

--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -28,6 +28,7 @@ braces around the entire field=formula.
 ; **-nh newheader**: replace header in output with fields given by this option
 ; **-sh sepheader**: write a resultfile without header, and write the header into the file **sepheader**
 ; **-hc headerincomment**: if 1, the last of the starting comment lines will be used for the header instead of the first non-comment line
+; **-hf headerfile: infile does not have a header, the header will be read from **headerfile** instead
 ; **-h**: return header fields in file
 ; **-n**: return sample names in file
 The query or field lines can contain more than one line (enclose in '').
