--- a/docs/howto_functions.wiki
+++ b/docs/howto_functions.wiki
@@ -1,53 +1,45 @@
 =Other functions=
-= =
 
 ==Genome region operations==
-= =
 
 Some examples of operations on genome regions files. Although some of the operations can also be achieved by advanced queries, we show here how to use regions files.
 
+Select regions sequenced by CG (with two SNV callers)
 {{{
 cg select -q 'count($sequenced-cg*, == 1) == 4' \
 	NA19240_chrom22.tsv.gz > reg_2.tsv
 }}}
 
-selects regions sequenced by CG (with two SNV callers)
-
+Then calculate how large the selected regions are
 {{{
 cg covered reg2.tsv > reg2.covered
 }}}
 
-then calculates how large the selected regions are
-
+Select regions representing all missense SNVs
 {{{
 cg select -q '$impact =="MISSENSE" && $type == "snp" ' \
 	NA19240_chrom22.tsv.gz > reg_missense.tsv
 }}}
 
-selects regions representing all missense SNVs
-
+Join both region files
 {{{
 cg regjoin reg_2.tsv reg_missense.tsv > joined.tsv
 }}}
 
-joins both region files
-
+Subtract missense SNVs from the first file
 {{{
 cg regsubtract reg_2.tsv reg_missense.tsv > subtracted.tsv
 }}}
 
-subtracts missense SNVs from the first file
-
 ==Primer design==
 
 
+First select regions for design for all missense SNVs
 {{{
 cg makeregions reg_missense.tsv 200 > regval_missense.tsv
 }}}
 
-First select regions for design for all missense SNVs
-
+Then make primers for them using the experiment name ValidationName and the location of the reference genome
 {{{
 cg makeprimers regval_missense.tsv ValidationName 600 500 dbdir > primers-valreg.tsv
-
-Then make primers for them using the experiment name ValidationName and the location of the reference genome
+}}}
