--- a/lib/cg_covered.wiki
+++ b/lib/cg_covered.wiki
@@ -1,7 +1,7 @@
 = Covered =
 
 == Format ==
-cg covered ?regfile?
+cg covered ?options? ?regfile?
 
 == Summary ==
 Find number of bases covered by regions in a region file
@@ -12,6 +12,10 @@ and the number of bases is returned per chromosome and for the total.
 
 == Arguments ==
 ; **regfile**: file containing regions. If not present, stdin will be used
+
+== Options ==
+; **-n namecol**: subtotals are given per identical names (consequtive) in this column, default is to use
+the chrom(osome) column
 
 == Category ==
 Regions
