new cg_select: based on tsv_selectc (use tcl expr via extension), added new functions (avg, region), improved min, max, ...

--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -45,19 +45,28 @@ and functions provided by awk.
 Some extra functions are available:
 
 === Tools ===
-; **min(a1,a2,...)**: returns the minimum of a1, a2, ... If one the args is not a number it will be replaced by 999999999
-; **max(a1,a2,...)**: returns the maximum of a1, a2, ... If one the args is not a number it will be replaced by -999999999
+; **min(a1,a2,...)**: returns the minimum of a1, a2, ...
+a1, etc. can be a list of numbers (separated by commas, spaces or ;).
+If one of the args is not a number it will be replaced by Inf
+; **max(a1,a2,...)**: returns the maximum of a1, a2, ...
+a1, etc. can be a list of numbers (separated by commas, spaces or ;).
+If one of the args is not a number it will be replaced by -Inf
 ; **oneof($field,value1,cvalue2,...)**: returns true if the given field matches one of the values
 The default value for non-numeric arguments can be set e.g. to 1000 by giving def=1000 as the first argument
-
+; **avg(value,...)**: returns the average of the values given. Non-number values are ignored.
+If no number was given, the answer will be NaN
+; **region("chromosome:begin-end",...)**: is true for any region in dataset that overlaps the given regions.
+Can also be given as region(chromosome,begin,end,...).
+If the chromosome value in the query or the data file starts with chr, this part is ignored: chr2 will match 2, as wel as Chr2.
+; **regexp(value,pattern): true if value matches the regular expression given by **pattern**
 === fields that contain comma separated lists ===
 Some fields can contain multiple values in the form of a comma separated list. The following functions allow
 using this in queries
 
-; **lmin($field)**: the minimum of the list of numbers (comma separated) in field. A default value (999999999) is given for non-numeric characters (-)
-; **lmind($field, def)**: same as lmin, but you can set the default value for non-numeric characters using def (default = 0)
-; **lmax($field)**: the maximum of the list of numbers (comma separated) in field. A default value (-999999999) is given for non-numeric characters (-)
-; **lmaxd($field, def)**: same as lmax, but you can set the default value for non-numeric characters using def (default = 0)
+; **lmin($field, ...)**: the minimum of the list of numbers (comma or space or ; separated) in field. A default value (Inf) is given for non-numeric characters (-)
+; **lmind($field, ..., def)**: same as lmin, but you can set the default value for non-numeric characters is given as the last parameter
+; **lmax($field, ...)**: the maximum of the list of numbers (comma or space or ; separated) in field. A default value (-Inf) is given for non-numeric characters (-)
+; **lmaxd($field, ..., def)**: same as lmax, but you can set the default value for non-numeric characters is given as the last parameter
 
 === multifield functions ===
 The following functions address multiple fields.
